--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
@@ -16,7 +16,7 @@
             <TemplateColumn T="SeasonDriverListing" Title="Name" SortBy="e => e.Name">
                 <CellTemplate>
                     <MudStack Row="true" AlignItems="AlignItems.Center">
-                        <MudText>@context.Item.Name</MudText>
+                        <MudText Class="overflow-hider">@context.Item.Name</MudText>
                         <MudSpacer />
                         <CountryFlag Code="@context.Item.Country" Size="ElementSize.Small" />
                     </MudStack>
