--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -22,7 +22,7 @@
                             ΩΩΩΩΩΩλλλλλλλλλλλλλλ
                         </MudText>
 
-                        <ClimateIcon Icon="@IconCollection.Mist" Colour="@("#FF81219B")" />
+                        <CustomIcon Icon="@IconCollection.Mist" Colour="@("#FF81219B")" />
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12" sm="6">
@@ -165,10 +165,6 @@
                     <MudListItemExtended T="string" Text="@config.SafetyCarChance.ToString()" SecondaryText="Safety car odds" />
                     <MudListItemExtended T="string" Text="@config.SafetyCarGap.ToString()" SecondaryText="Safety car gap" />
                     <MudListItemExtended T="string" Text="@config.SafetyCarReturnChance.ToString()" SecondaryText="Safety car return odds" />
-                    <MudListItemExtended T="string" Text="@config.SafetyPitstopSubtracter.ToString()" SecondaryText="Pit cost during caution subtract" />
-                    <MudListItemExtended T="string" Text="@config.MistakeAmountRolls.ToString()" SecondaryText="Mistake rolls" />
-                    <MudListItemExtended T="string" Text="@config.MistakeLowerValue.ToString()" SecondaryText="Mistake lower RNG" />
-                    <MudListItemExtended T="string" Text="@config.MistakeUpperValue.ToString()" SecondaryText="Mistake upper RNG" />
                     <MudListItemExtended T="string" Text="@config.BattleRng.ToString()" SecondaryText="Battle RNG" />
                     <MudListItemExtended T="string" Text="@config.CarDriverStatusModifier.ToString()" SecondaryText="Team status modifier" />
                     <MudListItemExtended T="string" Text="@config.MinimumTyreLife.ToString()" SecondaryText="Minimum tyre life" />
