--- a/SimTECH/SimTECH/Pages/UserManual/Topics/Race/Racing.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/Race/Racing.razor
@@ -5,4 +5,18 @@
     <MudText>
         It's what we do, in this section you can read up more about the racing process and the calculations in it.
     </MudText>
+
+    <MudText Typo="Typo.subtitle1">Practice</MudText>
+    <MudDivider Class="my-1" />
+
+    <MudText>
+        Qualifying RNG will be used as maximum RNG, minimum RNG is qualifying RNG but negative (aka multiplied by -1).
+    </MudText>
+
+    <MudText Typo="Typo.subtitle1">Qualifying</MudText>
+    <MudDivider Class="my-1" />
+
+    <MudText>
+        Decided starting grid position.
+    </MudText>
 </MudPaper>
