--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -95,7 +95,6 @@
 
     private List<Climate> climates;
     private List<Incident> incidents;
-    private List<Manufacturer> manufacturers;
     private List<Trait> trackTraits = new();
     private List<Tyre> tyres;
 
@@ -404,4 +403,6 @@
         RaweCeek.Race.State = State.Closed;
         loading = false;
     }
+
+    private void GoToCommon(string path) => _nav.NavigateTo(path);
 }
