--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -500,5 +500,5 @@
         _ = await _dialogService.ShowAsync<QualyBattles>("QualifyingBattles", parameters);
     }
 
-    private void GoToCommon(string url) => _nav.NavigateTo(url);
+    private void GoToCommon(string path) => _nav.NavigateTo(path);
 }
